--- a/.gitignore
+++ b/.gitignore
@@ -51,5 +51,12 @@ Module.symvers
 Mkfile.old
 dkms.conf
 
+# NDS files
+*.nds
+*.arm9
+.project
+.cproject
+.cdtproject
+
 # Mac OSX files
 .DS_STORE
